[package]
name = "metaphone"
description = "Realization of phonetic algorithm metaphone"
version = "0.1.1"
authors = ["Max Frai <me@maxfrai.com>"]
edition = "2018"
keywords = ["phonetic", "metaphone", "soundex", "language", "nlp"]
categories = ["text-processing"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/max-frai/metaphone-rs"

[dependencies]
lazy_static = "1.2"
regex = "1.1"
itertools = "0.8"